--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-
     <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
@@ -15,7 +14,7 @@
             <div class="panel-group" id="panel-79027">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                         <a class="panel-title collapsed" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-350064">Collapsible Group Item #1</a>
+                         <a class="panel-title collapsed" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-350064">Version 1</a>
                     </div>
                     <div id="panel-element-350064" class="panel-collapse collapse">
                         <div class="panel-body">
@@ -28,10 +27,10 @@
                                                 #
                                             </th>
                                             <th>
-                                                Product
+                                                Change
                                             </th>
                                             <th>
-                                                Payment Taken
+                                                Date
                                             </th>
                                             <th>
                                                 Status
@@ -39,57 +38,57 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
+                                        <tr class="warning">
                                             <td>
                                                 1
                                             </td>
                                             <td>
-                                                TB - Monthly
+                                                ScrollSpy
                                             </td>
                                             <td>
-                                                01/04/2012
+                                                26.5.2017
                                             </td>
                                             <td>
-                                                Default
+                                                Spying broken
                                             </td>
                                         </tr>
-                                        <tr class="active">
-                                            <td>
-                                                1
-                                            </td>
-                                            <td>
-                                                TB - Monthly
-                                            </td>
-                                            <td>
-                                                01/04/2012
-                                            </td>
-                                            <td>
-                                                Approved
-                                            </td>
-                                        </tr>
-                                        <tr class="success">
+                                        <tr class="danger">
                                             <td>
                                                 2
                                             </td>
                                             <td>
-                                                TB - Monthly
+                                                About page
                                             </td>
                                             <td>
-                                                02/04/2012
+                                                26.5.2017
                                             </td>
                                             <td>
-                                                Declined
+                                                Planning phase
                                             </td>
                                         </tr>
-                                        <tr class="warning">
+                                        <tr class="success">
                                             <td>
                                                 3
                                             </td>
                                             <td>
-                                                TB - Monthly
+                                                Generating article chapters
                                             </td>
                                             <td>
-                                                03/04/2012
+                                                20.5.2017
+                                            </td>
+                                            <td>
+                                                Finalized
+                                            </td>
+                                        </tr>
+                                        <tr class="warning">
+                                            <td>
+                                                4
+                                            </td>
+                                            <td>
+                                                Article about Blender+shortcuts table
+                                            </td>
+                                            <td>
+                                                26.5.2017
                                             </td>
                                             <td>
                                                 Pending
@@ -97,16 +96,16 @@
                                         </tr>
                                         <tr class="danger">
                                             <td>
-                                                4
+                                                5
                                             </td>
                                             <td>
-                                                TB - Monthly
+                                                Main page
                                             </td>
                                             <td>
-                                                04/04/2012
+                                                26.5.2017
                                             </td>
                                             <td>
-                                                Call in to confirm
+                                                Designing needed
                                             </td>
                                         </tr>
                                     </tbody>
@@ -117,31 +116,28 @@
                             <div class="col-md-6">
                                 <dl>
                                     <dt>
-                                        Description lists
+                                        Update 1
                                     </dt>
                                     <dd>
-                                        A description list is perfect for defining terms.
+                                        Scrollspy je broken. Nejenže nejde posunout odkazy javascriptu, ale přestal spyovat "body" článku. Zatím neřeším.
+                                    </dd>
+                                    <dd>
+                                        Jelikož je tento blog odkazován již na LinkedIn, je třeba vytvořit osobní profil na těchto stránkách.
                                     </dd>
                                     <dt>
-                                        Euismod
+                                        Scripting
                                     </dt>
                                     <dd>
-                                        Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.
-                                    </dd>
-                                    <dd>
-                                        Donec id elit non mi porta gravida at eget metus.
+                                        Vytvořil jsem script na automatické generování kapitol článků. (Python)
                                     </dd>
                                     <dt>
-                                        Malesuada porta
+                                        Články
                                     </dt>
                                     <dd>
-                                        Etiam porta sem malesuada magna mollis euismod.
+                                        Velmi by pomohl souhrnný článek Doporučené věci, jež už má záložku v menu, něco v podobném stylu jako tato stránka s různými vzdělávacími obory.
                                     </dd>
-                                    <dt>
-                                        Felis euismod semper eget lacinia
-                                    </dt>
                                     <dd>
-                                        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                                        Blender článek se zkratkami by bodl.
                                     </dd>
                                 </dl>
                             </div>
@@ -155,7 +151,7 @@
                     </div>
                     <div id="panel-element-776885" class="panel-collapse collapse">
                         <div class="panel-body">
-                            Anim pariatur cliche...
+                            Rezervováno pro Update 2
                         </div>
                     </div>
                 </div>
