--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -14,7 +14,7 @@
             <div class="panel-group" id="panel-79027">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                         <a class="panel-title collapsed" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-350064">Version 1</a>
+                         <a class="panel-title" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-350064">Version 1</a>
                     </div>
                     <div id="panel-element-350064" class="panel-collapse collapse">
                         <div class="panel-body">
@@ -147,7 +147,7 @@
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                         <a class="panel-title collapsed" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-776885">Collapsible Group Item #2</a>
+                         <a class="panel-title" data-toggle="collapse" data-parent="#panel-79027" href="#panel-element-776885">Version 2</a>
                     </div>
                     <div id="panel-element-776885" class="panel-collapse collapse">
                         <div class="panel-body">
