Introducing doporucene_veci

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
                           <li><a href="/advancedprocrastinationhacks">Advanced procrastination hacks</a></li>
                           <li><a href="/artofbanter">Art of Banter</a></li>
                           <li class="divider"></li>
-                          <li><a href="#">Doporučené věci</a></li>
+                          <li><a href="/doporucene_veci">Doporučené věci</a></li>
                         </ul>
                     </li>
                 </ul>
