--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+{% block content %}
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
@@ -116,3 +118,4 @@
 		</div>
 	</div>
 </div>
+{% endblock %}
