--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -24,10 +24,10 @@
 								General suggestions, start here
 							</h3>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Mnoho odkazů jsem získal z těchto zdrojů.
 							</p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -40,10 +40,9 @@
 								Must read
 							</h3>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
+							     Dle mého názoru povinná literatura 21. století.
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -56,10 +55,10 @@
 								People to follow
 							</h3>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Elon Musk, Tim Ferris a další.
 							</p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -74,10 +73,10 @@
 								Social / Psychology
 							</h3>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								V dnešním světě dovednosti k nezaplacení.
 							</p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -90,10 +89,10 @@
 								Services / Tools
 							</h3>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+								Služby, které Vám pomůžou.
 							</p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -106,10 +105,10 @@
 								Fun stuff / Interesting web pages
 							</h3>
 							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+							     Cokoliv, co mi přijde na internetu zajímavé.
 							</p>
 							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
