--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -165,7 +165,7 @@
       <br/>
       Toto pravidlo se vztahuje i na návyky. Pokud se snažíte vytvořit nový návyk, ujistěte se, že z počátku nezabírá více jak 2 minuty. Jinak budete mít, hlavně z počátku, velký problém se k němu donutit, navíc pokud je vám nepříjemný.
                         Jakmile budete používat toto pravidlo delší dobu, zjistíte, že stíháte. Úlohy se vám nebudou hromadit do dvouhodinových pracovních bloků, které si koledují o to, aby jste místo nich prokrastinovali.
-                        Pokud chcete jíst zdravě, vemte si ovoce a snězte jej, zabere to méně jak 2 minuty. Udělejte tak každý den a přistihnete se že nahrazujete sodu za vodu a k jídlu si uděláte jako přílohu salát, sladkosti nahradíte ovocem. Podobně pokud si chcete navyknout denně číst, přečtěte si první stranu knihy. V rámci setrvačnosti si ani neuvědomíte, že máte celou kapitolu za sebou. Co třeba běhání? Není problém. Nasaďte si běžecké boty a jděte před dveře - to by vám mělo zabrat méně jak 2 minuty - no a když už tam jste, setrvačností si dáte 20 minut běhu a ještě si přidáte 30 dřepů.
+                        Pokud chcete jíst zdravě, vemte si ovoce a snězte jej, zabere to méně jak 2 minuty. Udělejte tak každý den a přistihnete se, že nahrazujete sodu za vodu a k jídlu si uděláte jako přílohu salát, sladkosti nahradíte ovocem. Podobně pokud si chcete navyknout denně číst, přečtěte si první stranu knihy. V rámci setrvačnosti si ani neuvědomíte, že máte celou kapitolu za sebou. Co třeba běhání? Není problém. Nasaďte si běžecké boty a jděte před dveře - to by vám mělo zabrat méně jak 2 minuty - no a když už tam jste, setrvačností si dáte 20 minut běhu a ještě si přidáte 30 dřepů.
                         Prokrastinace je téměř vždy vyřešena, když učiníte první krok. Největší překážkou je začít, tak proč si to nezjednodušit!?
       <br/>
       A journey of thousand miles must begin with a single step.
@@ -235,7 +235,7 @@
       Metoda Zadek v Křesle
      </h3>
      <p class="text-justify">
-      Obzvláště mezi spisovateli knih je tato 100 % efektivní anti-prokrastinační strategie populární. Spočívá v tom, že si vymezíte časový úsek pro práci a sednete si do křesla. Bez jakéhokoliv vyrušení, bez ničeho. Vše dáte pryč nebo vypnete, kromě toho, co máte dělat. Mohli by jste tam jen tak sedět a nedělat nic, avšak stejně nakonec začnete psát. Pak nastane setrvačnost a opět vás to přestane bavit. Chvíli nic neděláte a pak vám to nedá a zase začnete. Téměř vždy po konci vašeho časového úseku budete mít pár stránek napsaných.
+      Obzvláště mezi spisovateli knih je tato 100% efektivní anti-prokrastinační strategie populární. Spočívá v tom, že si vymezíte časový úsek pro práci a sednete si do křesla. Bez jakéhokoliv vyrušení, bez ničeho. Vše dáte pryč nebo vypnete, kromě toho, co máte dělat. Mohli by jste tam jen tak sedět a nedělat nic, avšak stejně nakonec začnete psát. Pak nastane setrvačnost a opět vás to přestane bavit. Chvíli nic neděláte a pak vám to nedá a zase začnete. Téměř vždy po konci vašeho časového úseku budete mít pár stránek napsaných.
       <br/>
       Nejste spisovateli? Nevadí. To že se zavážete k bloku nevyrušeného času pro práci na specifickém úkolu je jeden z nejefektivnějších anti-prokrastinačních prostředků.
                         Podobný stav navodí i let letadlem. Jelikož vás nic neotravuje a nemáte se čím zabavit, začnete pracovat. Tento stav si můžete imaginárně navodit při dovolené. Všechny vymoženosti vypněte, a nedejte si možnost dělat něco jiného než to, co máte.
@@ -282,7 +282,7 @@
      <p class="text-justify">
       Pokud jste Master Prokrastinátor a nejste si jisti, jestli jste připraveni na dlouhé časové bloky či jste neschopni použít metodu zadku v křesle, tohle bude přesně pro vás.
       <br/>
-      Potřebujete: Úkolníček, Časovač (i internetový)
+      Potřebujete: <strong>Úkolníček a Časovač</strong> (i internetový)
       <br/>
       Jak to funguje: Sednete si, nastavíte časovač na 10 minut a pracujete bez rozptýlení dokud čas nevyprší. Během 10 minut dělejte jen zadanou práci, nic jiného. Je to přece jen 10 minut. Následně máte 2 minuty na to dělat co chcete (nejlépe vstaňte a změňte aktivitu). Přesně 2 minuty. Čas vypršel, připravte se na dalších 10 minut práce. Opakujte.
                     Co ale to *5? Měli by jste tento cyklus 5x opakovat, aby jste docílili 60 minut práce a krátkých přestávek.
@@ -484,7 +484,7 @@
        Využijte těchto malých kroků pro vybudování setrvačnosti. Nic vás neučiní úspěšnějším tak jako úspěch.
       </li>
       <li>
-       Svůj To-Do list učiňte akčnějším a jednodušším na vykonání. Nejlépe by akce měly začínat 2 minutovou akcí.
+       Svůj To-Do list učiňte akčnějším a jednodušším na vykonání. Nejlépe by činnosti měly začínat 2 minutovou akcí.
       </li>
       <li>
        Dvouminutové pravidlo. Pokud něco dokážete udělat do 2 minut, udělejte to hned. Jinak se nasbírají.
