fixing main page

--- a/app/static/css/theme.css
+++ b/app/static/css/theme.css
@@ -16,4 +16,7 @@ body {
 .theme-showcase .navbar .container {
   width: auto;
 }
+
+.navbar { margin-bottom: 0; }
+
 #editor {overflow:scroll; max-height:300px}
