--- a/app/templates/articles/APH.html
+++ b/app/templates/articles/APH.html
@@ -27,7 +27,7 @@
      <div class="item">
       <img alt="Carousel Bootstrap Second" src="static/img/APH/carousel2.jpg">
        <div class="carousel-caption">
-        <h2 class="text-danger">
+        <h2 class="text-primary">
          <strong>
           Odhalte správné nástroje
                                 pro boj s prokrastinací
