--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -61,7 +61,7 @@
     </nav>
     <div class="wrapper">
         {% if title == maintitle %}
-        <div class="header header-filter" style="background-image: url('static/img/bg5.jpeg');">
+        <div class="header" style="background-image: url('static/img/bg5.jpeg');">
         </div>
         {% endif %}
         <div class="main main-raised">
