--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,6 +64,7 @@
         </div>
         {% endif %}
         <div class="main main-raised">
+            <div class="section">
                 <div class="container-fluid">
                     <div class="row-fluid">
                       <!--left-->
@@ -92,6 +93,7 @@
                       </div>
                     </div>
                 </div>
+            </div>
         </div>
     </div>
 </body>
