--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -108,7 +108,7 @@
 							     Cokoliv, co mi přijde na internetu zajímavé.
 							</p>
 							<p>
-								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="static/img/blender.png">Blender cheat sheet</a>
 							</p>
 						</div>
 					</div>
