--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -123,7 +123,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                <button type="button" class="close" data-toggle="modal" aria-hidden="true">
                     <i class="material-icons">clear</i>
                 </button>
                 <h4 class="modal-title">Modal title</h4>
@@ -133,7 +133,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-danger btn-simple" data-toggle="modal">Close</button>
             </div>
         </div>
     </div>
