modal tweaks DV

--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4  modal-form">
 					<div class="thumbnail">
 						<img alt="Bootstrap Thumbnail First" src="static/img/Doporucene_veci/general.jpg">
 						<div class="caption">
@@ -27,7 +27,7 @@
 								Mnoho odkazů jsem získal z těchto zdrojů.
 							</p>
 							<p>
-								<a class="btn btn-success" data-toggle="modal" data-target="#general">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" id="open" data-toggle="modal" data-target="#general">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
