--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -16,8 +16,8 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="row">
-				<div class="col-md-4  modal-form">
-					<div class="thumbnail">
+				<div class="col-md-4">
+					<div class="thumbnail  modalform">
 						<img alt="Bootstrap Thumbnail First" src="static/img/Doporucene_veci/general.jpg">
 						<div class="caption">
 							<h3>
