--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid modalform">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="jumbotron">
@@ -17,7 +17,7 @@
 		<div class="col-md-12">
 			<div class="row">
 				<div class="col-md-4">
-					<div class="thumbnail  modalform">
+					<div class="thumbnail">
 						<img alt="Bootstrap Thumbnail First" src="static/img/Doporucene_veci/general.jpg">
 						<div class="caption">
 							<h3>
