--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -27,7 +27,7 @@
 								Mnoho odkazů jsem získal z těchto zdrojů.
 							</p>
 							<p>
-								<a class="btn btn-success" id="open" data-toggle="modal" data-target="#general">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" id="open" data-toggle="modal" data-target="#general" data-backdrop="false">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
