--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -129,8 +129,33 @@
                 <h4 class="modal-title">Modal title</h4>
             </div>
             <div class="modal-body">
-                <p>Místo pro tabulku
-                </p>
+                <table class="table">
+                   <thead>
+                      <tr>
+                         <th>#</th>
+                         <th>Author</th>
+                         <th>POI</th>
+                         <th>URL</th>
+                         <th>Description</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>Timothy Ferris</td>
+                         <td>A great place to start</td>
+                         <td>Blog</td>
+                         <td>Podcaster, Self-Development</td>
+                      </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>Elon Musk</td>
+                         <td>Future is now</td>
+                         <td>TeslaFan</td>
+                         <td>Entrepreneur, Visionaire, SpaceX, Tesla</td>
+                      </tr>
+                   </tbody>
+                </table>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
