--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,7 @@
     
 </head>
 
-<body data-spy="scroll" data-target=".myScrollspy" data-offset="20">
+<body data-spy="scroll" data-target="#myScrollspy" data-offset="20">
     <nav class="navbar navbar-success navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
