--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -144,15 +144,19 @@
                          <td>1</td>
                          <td>Timothy Ferris</td>
                          <td>A great place to start</td>
-                         <td>Blog</td>
+                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
                          <td>Podcaster, Self-Development</td>
                       </tr>
                       <tr>
                          <td>2</td>
                          <td>Elon Musk</td>
                          <td>Future is now</td>
-                         <td>TeslaFan</td>
-                         <td>Entrepreneur, Visionaire, SpaceX, Tesla</td>
+                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
+                         <td>Entrepreneur, Visionaire, SpaceX, Tesla
+                            <a tabindex="0" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
+                                Entrepreneur, Visionaire, SpaceX, Tesla
+                            </a>
+                        </td>
                       </tr>
                    </tbody>
                 </table>
