--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -152,8 +152,8 @@
                          <td>Elon Musk</td>
                          <td>Future is now</td>
                          <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
-                         <td>Entrepreneur, Visionaire, SpaceX, Tesla
-                            <a tabindex="0" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
+                         <td>
+                            <a tabindex="0" class="btn btn-lg btn-danger" role="button" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
                                 Entrepreneur, Visionaire, SpaceX, Tesla
                             </a>
                         </td>
