--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -6,6 +6,9 @@
 			<div class="jumbotron">
 				<h2>
 					Vítejte na souhrnu doporučených věcí!
+					<a tabindex="0" class="btn btn-danger" role="button" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
+                                Entrepreneur, Visionaire, SpaceX, Tesla
+                            </a>
 				</h2>
 				<p>
 					Tato stránka slouží pro shrnutí důležitých publikací, odkazů a stránek. Jelikož se odkazy neustále mění, použijte prosím Google pro hledání níže uvedených bodů.
@@ -153,7 +156,7 @@
                          <td>Future is now</td>
                          <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
                          <td>
-                            <a tabindex="0" class="btn btn-lg btn-danger" role="button" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
+                            <a tabindex="0" class="btn btn-danger" role="button" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
                                 Entrepreneur, Visionaire, SpaceX, Tesla
                             </a>
                         </td>
