--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -6,9 +6,9 @@
 			<div class="jumbotron">
 				<h2>
 					Vítejte na souhrnu doporučených věcí!
-					<a tabindex="0" class="btn btn-danger" role="button" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
+					<a id="moreinfo" tabindex="0" class="btn btn-danger" role="button" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
                                 Entrepreneur, Visionaire, SpaceX, Tesla
-                            </a>
+                    </a>
 				</h2>
 				<p>
 					Tato stránka slouží pro shrnutí důležitých publikací, odkazů a stránek. Jelikož se odkazy neustále mění, použijte prosím Google pro hledání níže uvedených bodů.
