--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -6,9 +6,6 @@
 			<div class="jumbotron">
 				<h2>
 					Vítejte na souhrnu doporučených věcí!
-					<a id="moreinfo" tabindex="0" class="btn btn-danger" role="button" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
-                                Entrepreneur, Visionaire, SpaceX, Tesla
-                    </a>
 				</h2>
 				<p>
 					Tato stránka slouží pro shrnutí důležitých publikací, odkazů a stránek. Jelikož se odkazy neustále mění, použijte prosím Google pro hledání níže uvedených bodů.
@@ -61,7 +58,7 @@
 								Elon Musk, Tim Ferris a další.
 							</p>
 							<p>
-								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#people" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -79,7 +76,7 @@
 								V dnešním světě dovednosti k nezaplacení.
 							</p>
 							<p>
-								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#social" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -95,7 +92,7 @@
 								Služby, které Vám pomůžou.
 							</p>
 							<p>
-								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#service" href="#">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -111,7 +108,7 @@
 							     Cokoliv, co mi přijde na internetu zajímavé.
 							</p>
 							<p>
-								<a class="btn btn-success" href="#">Více</a> <a class="btn" href="static/img/blender.png">Blender cheat sheet</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#fun" href="#">Více</a> <a class="btn" href="static/img/blender.png">Blender cheat sheet</a>
 							</p>
 						</div>
 					</div>
@@ -121,7 +118,7 @@
 	</div>
 </div>
 
-<!--Start Modal-->
+<!--Start Modal GENERAL-->
 <div class="modal fade" id="general" tabindex="-1" role="dialog" aria-labelledby="generalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
@@ -156,9 +153,7 @@
                          <td>Future is now</td>
                          <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
                          <td>
-                            <a tabindex="0" class="btn btn-danger" role="button" title="More information" data-toggle="popover" data-trigger="focus" data-content="Additional information">
-                                Entrepreneur, Visionaire, SpaceX, Tesla
-                            </a>
+                            Entrepreneur, Visionaire, SpaceX, Tesla
                         </td>
                       </tr>
                    </tbody>
@@ -170,6 +165,250 @@
         </div>
     </div>
 </div>
+<!--End Modal-->
 
+<!--Start Modal READ-->
+<div class="modal fade" id="read" tabindex="-1" role="dialog" aria-labelledby="generalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    <i class="material-icons">clear</i>
+                </button>
+                <h4 class="modal-title">2nd title</h4>
+            </div>
+            <div class="modal-body">
+                <table class="table">
+                   <thead>
+                      <tr>
+                         <th>#</th>
+                         <th>Author</th>
+                         <th>POI</th>
+                         <th>URL</th>
+                         <th>Description</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>Dominic Mann</td>
+                         <td>17 Anti-Procrastination Hacks</td>
+                         <td><a href="https://www.amazon.co.uk/17-Anti-Procrastination-Hacks-Overcome-Procrastination/dp/1519061080/ref=sr_1_fkmr2_1?s=books&ie=UTF8&qid=1495984141&sr=1-1-fkmr2&keywords=advanced+procrastination+hacks" target="_blank">Amazon link</a></td>
+                         <td>Self-Development, Life Hacks</td>
+                      </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>Dale Carnegie</td>
+                         <td>How to win friends and influence people</td>
+                         <td><a href="https://www.amazon.co.uk/d/Books/How-Win-Friends-Influence-People-Dale-Carnegie/0091906814" target="_blank">Amazon link</a</td>
+                         <td>
+                            Self-Development, Life skills
+                        </td>
+                      </tr>
+                   </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Modal-->
+
+<!--Start Modal PEOPLE-->
+<div class="modal fade" id="people" tabindex="-1" role="dialog" aria-labelledby="generalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    <i class="material-icons">clear</i>
+                </button>
+                <h4 class="modal-title">2nd title</h4>
+            </div>
+            <div class="modal-body">
+                <table class="table">
+                   <thead>
+                      <tr>
+                         <th>#</th>
+                         <th>Author</th>
+                         <th>POI</th>
+                         <th>URL</th>
+                         <th>Description</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>Timothy Ferris</td>
+                         <td>A great place to start</td>
+                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
+                         <td>Podcaster, Self-Development</td>
+                      </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>Elon Musk</td>
+                         <td>Future is now</td>
+                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
+                         <td>
+                            Entrepreneur, Visionaire, SpaceX, Tesla
+                        </td>
+                      </tr>
+                   </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Modal-->
+
+<!--Start Modal SOCIAL-->
+<div class="modal fade" id="social" tabindex="-1" role="dialog" aria-labelledby="generalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    <i class="material-icons">clear</i>
+                </button>
+                <h4 class="modal-title">2nd title</h4>
+            </div>
+            <div class="modal-body">
+                <table class="table">
+                   <thead>
+                      <tr>
+                         <th>#</th>
+                         <th>Author</th>
+                         <th>POI</th>
+                         <th>URL</th>
+                         <th>Description</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>Timothy Ferris</td>
+                         <td>A great place to start</td>
+                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
+                         <td>Podcaster, Self-Development</td>
+                      </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>Elon Musk</td>
+                         <td>Future is now</td>
+                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
+                         <td>
+                            Entrepreneur, Visionaire, SpaceX, Tesla
+                        </td>
+                      </tr>
+                   </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Modal-->
+
+<!--Start Modal SERVICE-->
+<div class="modal fade" id="service" tabindex="-1" role="dialog" aria-labelledby="generalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    <i class="material-icons">clear</i>
+                </button>
+                <h4 class="modal-title">2nd title</h4>
+            </div>
+            <div class="modal-body">
+                <table class="table">
+                   <thead>
+                      <tr>
+                         <th>#</th>
+                         <th>Author</th>
+                         <th>POI</th>
+                         <th>URL</th>
+                         <th>Description</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>Timothy Ferris</td>
+                         <td>A great place to start</td>
+                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
+                         <td>Podcaster, Self-Development</td>
+                      </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>Elon Musk</td>
+                         <td>Future is now</td>
+                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
+                         <td>
+                            Entrepreneur, Visionaire, SpaceX, Tesla
+                        </td>
+                      </tr>
+                   </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--End Modal-->
+
+<!--Start Modal FUN-->
+<div class="modal fade" id="fun" tabindex="-1" role="dialog" aria-labelledby="generalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    <i class="material-icons">clear</i>
+                </button>
+                <h4 class="modal-title">2nd title</h4>
+            </div>
+            <div class="modal-body">
+                <table class="table">
+                   <thead>
+                      <tr>
+                         <th>#</th>
+                         <th>Author</th>
+                         <th>POI</th>
+                         <th>URL</th>
+                         <th>Description</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      <tr>
+                         <td>1</td>
+                         <td>Timothy Ferris</td>
+                         <td>A great place to start</td>
+                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
+                         <td>Podcaster, Self-Development</td>
+                      </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>Elon Musk</td>
+                         <td>Future is now</td>
+                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
+                         <td>
+                            Entrepreneur, Visionaire, SpaceX, Tesla
+                        </td>
+                      </tr>
+                   </tbody>
+                </table>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!--End Modal-->
 {% endblock %}
