--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -27,7 +27,7 @@
 								Mnoho odkazů jsem získal z těchto zdrojů.
 							</p>
 							<p>
-								<a class="btn btn-success" id="open" data-toggle="modal" data-target="#general" data-backdrop="false">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#general" data-backdrop="false">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -42,7 +42,7 @@
 							<p>
 							     Dle mého názoru povinná literatura 21. století.
 							<p>
-								<a class="btn btn-success" data-toggle="modal" data-target="#read">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#read" data-backdrop="false">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -58,7 +58,7 @@
 								Elon Musk, Tim Ferris a další.
 							</p>
 							<p>
-								<a class="btn btn-success" data-toggle="modal" data-target="#people" href="#">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#people"  data-backdrop="false">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -76,7 +76,7 @@
 								V dnešním světě dovednosti k nezaplacení.
 							</p>
 							<p>
-								<a class="btn btn-success" data-toggle="modal" data-target="#social" href="#">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#social" data-backdrop="false">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -92,7 +92,7 @@
 								Služby, které Vám pomůžou.
 							</p>
 							<p>
-								<a class="btn btn-success" data-toggle="modal" data-target="#service" href="#">Více</a> <a class="btn" href="#">Action</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#service" data-backdrop="false">Více</a> <a class="btn" href="#">Action</a>
 							</p>
 						</div>
 					</div>
@@ -108,7 +108,7 @@
 							     Cokoliv, co mi přijde na internetu zajímavé.
 							</p>
 							<p>
-								<a class="btn btn-success" data-toggle="modal" data-target="#fun" href="#">Více</a> <a class="btn" href="static/img/blender.png">Blender cheat sheet</a>
+								<a class="btn btn-success" data-toggle="modal" data-target="#fun" data-backdrop="false">Více</a> <a class="btn" href="static/img/blender.png">Blender cheat sheet</a>
 							</p>
 						</div>
 					</div>
