--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
-
-<p>This blog is about creating a solutions to my memory problems and to act as my portfolio.
+<div class="avatar">
+    <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised">
+</div>
+<div class="name">
+    <h3>Martin Černil</h3>
+</div>
+<p style="allign:center">This blog is about creating a solutions to my memory problems and to act as my portfolio.
 What i plan to do is make reviews, educational articles. I will be mainly focusing on self-development,
 education in general, my projects and school subjects.
 
