--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="avatar">
-    <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised">
+    <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised" style="allign:center">
 </div>
 <div class="name">
     <h3>Martin Černil</h3>
