--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "basic.html" %}
 {% block content %}
 <div class="avatar">
     <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised" style="display:block margin:auto" >
