--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,7 +6,7 @@
 <div class="name">
     <h3>Martin Černil</h3>
 </div>
-<p style=>This blog is about creating a solutions to my memory problems and to act as my portfolio.
+<p class="text-center">This blog is about creating a solutions to my memory problems and to act as my portfolio.
 What i plan to do is make reviews, educational articles. I will be mainly focusing on self-development,
 education in general, my projects and school subjects.
 
