--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,7 +4,7 @@
     <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised">
 </div>
 <div class="name">
-    <h3>Martin Černil</h3>
+    <h3><strong>Martin Černil</strong></h3>
 </div>
 <p class="text-center">This blog is about creating a solutions to my memory problems and to act as my portfolio.
 What i plan to do is make reviews, educational articles. I will be mainly focusing on self-development,
