--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,9 +1,9 @@
 {% extends "basic.html" %}
 {% block content %}
-<div class="avatar">
+<div class="avatar text-center">
     <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised">
 </div>
-<div class="name">
+<div class="name text-center">
     <h3><strong>Martin Černil</strong></h3>
 </div>
 <p class="text-center">This blog is about creating a solutions to my memory problems and to act as my portfolio.
