--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "basic.html" %}
 {% block content %}
-<div class="avatar text-center">
+<div class="avatar">
     <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised">
 </div>
 <div class="name text-center">
