--- a/app/templates/basic.html
+++ b/app/templates/basic.html
@@ -68,7 +68,7 @@
             <div class="section">
                 <div class="container-fluid">
                     <div class="row-fluid">
-                      <div class="col-md-12 col-md-offset-6" >
+                      <div class="col-md-12" >
                       {% block content %}{% endblock %}
                       </div>
                     </div>
