--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "basic.html" %}
 {% block content %}
 <div class="avatar">
-    <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised">
+    <img src="static/img/avatar.jpg" class="img-circle img-responsive img-raised center-block">
 </div>
 <div class="name text-center">
     <h3><strong>Martin Černil</strong></h3>
