--- a/app/templates/basic.html
+++ b/app/templates/basic.html
@@ -66,8 +66,8 @@
         {% endif %}
         <div class="main main-raised">
             <div class="section">
-                <div class="container-fluid">
-                    <div class="row-fluid">
+                <div class="container">
+                    <div class="row">
                       <div class="col-md-12" >
                       {% block content %}{% endblock %}
                       </div>
