Editing doporucene veci

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -14,6 +14,6 @@ I´m a young guy from Czech Republic studying university in Brno. My dream is to
 and I plan to do that through trying everything I possibly can to find it.
 
 About this project: I plan to regularly update this blog, introducing new functions, learning more about Flask,
-heroku and postgres
+heroku and postgres.
 </p>
 {% endblock %}
