--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -21,7 +21,7 @@
 						<img alt="Bootstrap Thumbnail First" src="static/img/Doporucene_veci/general.jpg">
 						<div class="caption">
 							<h3>
-								General suggestions, start here
+								General suggestions
 							</h3>
 							<p>
 								Mnoho odkazů jsem získal z těchto zdrojů.
@@ -102,7 +102,7 @@
 						<img alt="Bootstrap Thumbnail Third" src="static/img/Doporucene_veci/fun.jpg">
 						<div class="caption">
 							<h3>
-								Fun stuff / Interesting web pages
+								Fun stuff / Interesting web
 							</h3>
 							<p>
 							     Cokoliv, co mi přijde na internetu zajímavé.
@@ -200,10 +200,8 @@
                          <td>2</td>
                          <td>Dale Carnegie</td>
                          <td>How to win friends and influence people</td>
-                         <td><a href="https://www.amazon.co.uk/d/Books/How-Win-Friends-Influence-People-Dale-Carnegie/0091906814" target="_blank">Amazon link</a</td>
-                         <td>
-                            Self-Development, Life skills
-                        </td>
+                         <td><a href="https://www.amazon.co.uk/d/Books/How-Win-Friends-Influence-People-Dale-Carnegie/0091906814" target="_blank">Amazon link</a></td>
+                         <td>Self-Development, Life skills</td>
                       </tr>
                    </tbody>
                 </table>
@@ -385,22 +383,8 @@
                       </tr>
                    </thead>
                    <tbody>
-                      <tr>
-                         <td>1</td>
-                         <td>Timothy Ferris</td>
-                         <td>A great place to start</td>
-                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
-                         <td>Podcaster, Self-Development</td>
-                      </tr>
-                      <tr>
-                         <td>2</td>
-                         <td>Elon Musk</td>
-                         <td>Future is now</td>
-                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
-                         <td>
-                            Entrepreneur, Visionaire, SpaceX, Tesla
-                        </td>
-                      </tr>
+                        {% block FUN %}
+                        {% endblock %}
                    </tbody>
                 </table>
             </div>
