Editing doporucene veci

--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -383,8 +383,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                        {% block FUN %}
-                        {% endblock %}
+                        {% include "FUN.html" %}
                    </tbody>
                 </table>
             </div>
