Editing doporucene veci2

--- a/app/templates/articles/FUN.html
+++ b/app/templates/articles/FUN.html
@@ -1,4 +1,4 @@
-{% extends ../doporucene_veci.html %}
+{% extends doporucene_veci.html %}
 {% block FUN %}
 <tr>
                          <td>1</td>
