Editing doporucene veci2

--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -383,7 +383,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                        {% include 'FUN.html' %}
+                        {% include 'FUN.html' ignore missing without context %}
                    </tbody>
                 </table>
             </div>
