--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -140,22 +140,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                      <tr>
-                         <td>1</td>
-                         <td>Timothy Ferris</td>
-                         <td>A great place to start</td>
-                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
-                         <td>Podcaster, Self-Development</td>
-                      </tr>
-                      <tr>
-                         <td>2</td>
-                         <td>Elon Musk</td>
-                         <td>Future is now</td>
-                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
-                         <td>
-                            Entrepreneur, Visionaire, SpaceX, Tesla
-                        </td>
-                      </tr>
+                      {% include "Doporucene_veci_tabulky\GENERAL.html" %}
                    </tbody>
                 </table>
             </div>
