--- a/app/templates/articles/GENERAL.html
+++ b/app/templates/articles/GENERAL.html
@@ -1,3 +1,5 @@
+{% extends "doporucene_veci.html" %}
+{% block table %}
                         <tr>
                          <td>1</td>
                          <td>Timothy Ferris</td>
@@ -13,3 +15,4 @@
                          <td>
                             Entrepreneur, Visionaire, SpaceX, Tesla
                         </td>
+                        {% endblock %}
