--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -140,7 +140,7 @@
                       </tr>
                    </thead>
                    <tbody>
-                      {% include "Doporucene_veci_tabulky\GENERAL.html" %}
+                      {% block table %}{% endblock %}  
                    </tbody>
                 </table>
             </div>
