--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -129,7 +129,7 @@
                 <h4 class="modal-title">1st title</h4>
             </div>
             <div class="modal-body">
-                {% block table %}{% endblock %}  
+                {% block table %}<p>Does it work?</p>{% endblock %}  
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
