--- a/app/templates/articles/doporucene_veci.html
+++ b/app/templates/articles/doporucene_veci.html
@@ -129,7 +129,34 @@
                 <h4 class="modal-title">1st title</h4>
             </div>
             <div class="modal-body">
-                {% block table %}<p>Does it work?</p>{% endblock %}  
+                <table class="table">
+                   <thead>
+                      <tr>
+                         <th>#</th>
+                         <th>Author</th>
+                         <th>POI</th>
+                         <th>URL</th>
+                         <th>Description</th>
+                      </tr>
+                   </thead>
+                   <tbody>
+                      {% block table %}<tr>
+                         <td>1</td>
+                         <td>Timothy Ferris</td>
+                         <td>A great place to start</td>
+                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
+                        <td>Podcaster, Self-Development</td>
+                      </tr>
+                      <tr>
+                         <td>2</td>
+                         <td>Elon Musk</td>
+                         <td>Future is now</td>
+                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
+                         <td>
+                            Entrepreneur, Visionaire, SpaceX, Tesla
+                        </td>{% endblock %}  
+                   </tbody>
+                </table>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger btn-simple" data-dismiss="modal">Close</button>
