--- a/app/templates/articles/GENERAL.html
+++ b/app/templates/articles/GENERAL.html
@@ -1,32 +1,15 @@
-{% extends "doporucene_veci.html" %}
-{% block table %}
-<table class="table">
-                   <thead>
-                      <tr>
-                         <th>#</th>
-                         <th>Author</th>
-                         <th>POI</th>
-                         <th>URL</th>
-                         <th>Description</th>
-                      </tr>
-                   </thead>
-                   <tbody>
-                      <tr>
-                         <td>1</td>
-                         <td>Timothy Ferris</td>
-                         <td>A great place to start</td>
-                         <td><a href="http://tim.blog/" target="_blank">Blog</a></td>
-                        <td>Podcaster, Self-Development</td>
-                      </tr>
-                      <tr>
-                         <td>2</td>
-                         <td>Elon Musk</td>
-                         <td>Future is now</td>
-                         <td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
-                         <td>
-                            Entrepreneur, Visionaire, SpaceX, Tesla
-                        </td>
-                   </tbody>
-                        
-                        {% endblock %}
-                        
+
+<tr>
+<td>1</td>
+<td>Timothy Ferris</td>
+<td>A great place to start</td>
+<td><a href="http://tim.blog/" target="_blank">Blog</a></td>
+<td>Podcaster, Self-Development</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Elon Musk</td>
+<td>Future is now</td>
+<td><a href="http://www.teslafan.cz/" target="_blank">TeslaFan</a</td>
+<td>TEST TEST TEST</td>
+</tr>                   
